for minor revision: bug fix; re-conduct model selection using 100% val loss

--- a/Tanaka/train_on_musicnet.ipynb
+++ b/Tanaka/train_on_musicnet.ipynb
@@ -22,7 +22,7 @@
     "from utils.checkpoint import save_ckpt_template as save_ckpt, load_ckpt_template as load_ckpt\n",
     "\n",
     "if torch.cuda.is_available():\n",
-    "    device = torch.device('cuda:1')\n",
+    "    device = torch.device('cuda')\n",
     "    torch.backends.cudnn.benchmark = True   # 加速卷积计算\n",
     "else:\n",
     "    device = torch.device('cpu')\n",
@@ -171,7 +171,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "epoch_total = 30\n",
+    "epoch_total = 30    # 会过拟合 30 is enough\n",
     "stage_save_interval = 50    # save checkpoint every $stage_save_interval$ epochs\n",
     "\n",
     "optimizer_amt.zero_grad()\n",
@@ -185,6 +185,7 @@
     "    virtual_batch = 0\n",
     "    for (input, target) in tqdm.tqdm(dataloader):\n",
     "        input = input.to(device)    # input: (batch, channel, time)\n",
+    "        input = input + torch.randn_like(input) * 0.0005 * torch.rand(input.shape[0], 1, 1, device=input.device)\n",
     "        for i in range(len(target)):\n",
     "            target[i] = target[i].to(device)\n",
     "        # target: list of (mix, notes, time) tensor\n",
@@ -220,10 +221,11 @@
     "    train_loss_sum = LossNorm.norm_sum(torch.tensor([train_loss[0], train_loss[1]])).item()\n",
     "    val_loss_sum = LossNorm.norm_sum(torch.tensor([val_loss[0], val_loss[1]])).item()\n",
     "\n",
-    "    final_loss = val_loss_sum * 0.85 + train_loss_sum * 0.15\n",
+    "    final_loss = val_loss[0]    # only care about cluster loss if amt branch is frozen\n",
     "    if train_amt:\n",
-    "        schedular_amt.step(val_loss[1] * 0.85 + train_loss[1] * 0.15)\n",
-    "    # schedular_cluster.step(val_loss[0] * 0.85 + train_loss[0] * 0.15)\n",
+    "        final_loss = val_loss_sum\n",
+    "        schedular_amt.step(val_loss[1])\n",
+    "    # schedular_cluster.step(val_loss[0])\n",
     "    schedular_cluster.step(epoch=epoch_now)\n",
     "\n",
     "    # save checkpoint\n",
