--- a/basicamt/ablation/learnableCQT/train_basicamt_learnableCQT.ipynb
+++ b/basicamt/ablation/learnableCQT/train_basicamt_learnableCQT.ipynb
@@ -4,9 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Fixing CQT Parameters for the Second Round of Training\n",
+    "# Learnable CQT Parameters for the Second Round of Training\n",
+    "This file train BasicAMT with learnable CQT on our synthetic dataset.\n",
     "\n",
-    "The first round of basicamt training must be completed."
+    "To train model on MusicNet, change the code at `~/basicamt/train_basicamt_musicnet`"
    ]
   },
   {
@@ -129,7 +130,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = torch.compile(model)"
+    "model_train = torch.compile(model.train(), mode='max-autotune')\n",
+    "model_eval = torch.compile(model.eval(), mode='max-autotune')"
    ]
   },
   {
@@ -138,13 +140,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "epoch_total = 50\n",
+    "epoch_total = 60\n",
     "stage_save_interval = 40    # save checkpoint every $stage_save_interval$ epochs\n",
     "\n",
     "optimizer.zero_grad()\n",
     "for epoch in range(epoch_now+1, epoch_total):\n",
     "    # training\n",
-    "    model.train()\n",
+    "    model_train.train()\n",
     "    train_loss = 0\n",
     "    virtual_batch = 0\n",
     "    for (input, target) in tqdm.tqdm(dataloader):\n",
@@ -159,10 +161,10 @@
     "            mixed = input.squeeze(dim=1)\n",
     "            midi_mixed = target.squeeze(dim=1)\n",
     "\n",
-    "        mixed = mixed + torch.randn_like(mixed) * 0.005   # 加入噪声 经过听觉和可视化觉得0.005是一个合适的值\n",
+    "        mixed = mixed + torch.randn_like(mixed) * 0.0005 * torch.rand(mixed.shape[0], 1, 1, device=mixed.device)\n",
     "        # midi_mixed: (batch, 7 * 12, 660)\n",
     "\n",
-    "        onset, note = model(mixed)\n",
+    "        onset, note = model_train(mixed)\n",
     "        # onset & note: (batch, 7 * 12, 660)\n",
     "        loss = BasicAMT.loss(onset, note, midi_mixed)\n",
     "        train_loss += loss.item()\n",
@@ -175,7 +177,7 @@
     "    train_loss /= len(dataloader)\n",
     "\n",
     "    # validation\n",
-    "    model.eval()\n",
+    "    model_eval.eval()\n",
     "    val_loss = 0\n",
     "    with torch.no_grad():\n",
     "        for (input, target) in tqdm.tqdm(valloader):\n",
@@ -189,13 +191,13 @@
     "                mixed = input.squeeze(dim=1)\n",
     "                midi_mixed = target.squeeze(dim=1)\n",
     "\n",
-    "            onset, note = model(mixed)\n",
+    "            onset, note = model_eval(mixed)\n",
     "            loss = BasicAMT.loss(onset, note, midi_mixed)\n",
     "            val_loss += loss.item()\n",
     "\n",
     "        val_loss /= len(valloader)\n",
     "    \n",
-    "    final_loss = val_loss * 0.85 + train_loss * 0.15\n",
+    "    final_loss = val_loss\n",
     "    schedular.step(final_loss)\n",
     "\n",
     "    # save checkpoint\n",
