--- a/basicamt/train_basicamt.ipynb
+++ b/basicamt/train_basicamt.ipynb
@@ -37,15 +37,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "device = torch.device(\"cuda:1\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "from data.septimbre.data import Instruments\n",
     "dataset = Instruments(\n",
     "    folder = '../data/septimbre/piano_large_short_256',\n",
@@ -130,7 +121,7 @@
     "            mixed = input.squeeze(dim=1)\n",
     "            midi_mixed = target.squeeze(dim=1)\n",
     "\n",
-    "        mixed = mixed + torch.randn_like(mixed) * 0.01   # 加入噪声 经过听觉和可视化觉得0.01是一个合适的值\n",
+    "        mixed = mixed + torch.randn_like(mixed) * 0.0005\n",
     "        # midi_mixed: (batch, 7 * 12, 660)\n",
     "\n",
     "        onset, note = model(mixed)\n",
