--- a/basicamt/train_basicamt_musicnet.ipynb
+++ b/basicamt/train_basicamt_musicnet.ipynb
@@ -75,7 +75,8 @@
     "\n",
     "# CQT配置\n",
     "from model.config import CONFIG\n",
-    "s_per_frame = CONFIG.s_per_frame"
+    "s_per_frame = CONFIG.s_per_frame\n",
+    "_model = None"
    ]
   },
   {
@@ -103,16 +104,20 @@
    "outputs": [],
    "source": [
     "from basicamt import BasicAMT, BasicAMT_all\n",
+    "\n",
+    "# change the parameter here to switch to learnable CQT or not\n",
+    "learnableCQT = False\n",
+    "\n",
     "if _model is not None:\n",
-    "    model = BasicAMT_all(CONFIG.CQT, _model.state_dict(), CQTlearnable=True).to(device)\n",
+    "    model = BasicAMT_all(CONFIG.CQT, _model.state_dict(), CQTlearnable=learnableCQT).to(device)\n",
     "    print(\"model initialized from BasicAMT\")\n",
     "else:\n",
-    "    model = BasicAMT_all(CONFIG.CQT, CQTlearnable=True).to(device)\n",
+    "    model = BasicAMT_all(CONFIG.CQT, CQTlearnable=learnableCQT).to(device)\n",
     "optimizer = torch.optim.AdamW(model.parameters(), lr=3e-4)\n",
     "# train on musicnet failed to converge on val set, so enlarge patience to avoid decreasing lr too early\n",
-    "schedular = torch.optim.lr_scheduler.ReduceLROnPlateau(optimizer, mode='min', factor=0.4, patience=8, threshold=1e-3)\n",
-    "checkpoint_path = \"basicamt_all.pth\"\n",
-    "loss_path = \"basicamt_all.loss.txt\"\n",
+    "schedular = torch.optim.lr_scheduler.ReduceLROnPlateau(optimizer, mode='min', factor=0.35, patience=3, threshold=1e-3)\n",
+    "checkpoint_path = \"basicamt_all_MN.pth\"\n",
+    "loss_path = \"basicamt_all_MN.loss.txt\"\n",
     "min_loss = float('inf')\n",
     "epoch_now = 0"
    ]
@@ -137,23 +142,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "epoch_total = 45\n",
+    "model_train = torch.compile(model.train(), mode='max-autotune')\n",
+    "model_eval = torch.compile(model.eval(), mode='max-autotune')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "epoch_total = 60\n",
     "stage_save_interval = 40    # save checkpoint every $stage_save_interval$ epochs\n",
     "\n",
     "optimizer.zero_grad()\n",
     "for epoch in range(epoch_now+1, epoch_total):\n",
     "    # training\n",
-    "    model.train()\n",
+    "    model_train.train()\n",
     "    train_loss = 0\n",
     "    virtual_batch = 0\n",
     "    for (input, target) in tqdm.tqdm(dataloader):\n",
     "        target = [x.max(dim=0)[0] for x in target]\n",
     "        target = torch.stack(target, dim=0).to(device) # target: (batch, 7 * 12, frames)\n",
     "\n",
-    "        # input = input + torch.randn_like(input) * 0.001\n",
     "        input = input.to(device)    # input: (batch, channel, time)\n",
+    "        input = input + torch.randn_like(input) * 0.0005 * torch.rand(input.shape[0], 1, 1, device=input.device)\n",
     "\n",
-    "        onset, note = model(input)\n",
+    "        onset, note = model_train(input)\n",
     "        # onset & note: (batch, 7 * 12, 660)\n",
     "        loss = BasicAMT.loss(onset, note, target)\n",
     "        train_loss += loss.item()\n",
@@ -165,28 +180,21 @@
     "    train_loss /= len(dataloader)\n",
     "\n",
     "    # validation\n",
-    "    model.eval()\n",
+    "    model_eval.eval()\n",
     "    val_loss = 0\n",
     "    with torch.no_grad():\n",
     "        for (input, target) in tqdm.tqdm(valloader):\n",
     "            target = [x.max(dim=0)[0] for x in target]\n",
     "            target = torch.stack(target, dim=0).to(device) # target: (batch, mix, 7 * 12, frames)\n",
     "            input = input.to(device)\n",
-    "\n",
-    "            target = target.max(dim=0).values\n",
-    "\n",
-    "            onset, note = model(input)\n",
+    "            onset, note = model_eval(input)\n",
     "            loss = BasicAMT.loss(onset, note, target)\n",
     "            val_loss += loss.item()\n",
     "\n",
     "        val_loss /= len(valloader)\n",
     "    \n",
-    "    final_loss = val_loss * 0.85 + train_loss * 0.15\n",
+    "    final_loss = val_loss\n",
     "    schedular.step(final_loss)\n",
-    "\n",
-    "    # on early epochs, val loss will increase a lot.\n",
-    "    if epoch == 20:\n",
-    "        min_loss = float('inf')  # reset min_loss to avoid lr drop too early\n",
     "\n",
     "    # save checkpoint\n",
     "    checkpoint_filename = f\"epoch{epoch}.pth\" if epoch % stage_save_interval == 0 else checkpoint_path\n",
@@ -198,6 +206,15 @@
     "    with open(loss_path, 'a') as f:\n",
     "        f.write(f\"{epoch}:\\ttrain_loss: {train_loss:.4f}\\tval_loss: {val_loss:.4f}\\n\")\n",
     "    epoch_now = epoch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.cqt.cqt_kernels.requires_grad"
    ]
   },
   {
@@ -250,8 +267,8 @@
    "outputs": [],
    "source": [
     "# 加载最佳模型\n",
-    "# states = load_ckpt(model, optimizer, \"best_\" + checkpoint_path)\n",
-    "states = load_ckpt(model, optimizer, checkpoint_path)\n",
+    "states = load_ckpt(model, optimizer, \"best_\" + checkpoint_path)\n",
+    "# states = load_ckpt(model, optimizer, checkpoint_path)\n",
     "if states:\n",
     "    min_loss, avg_loss, epoch_now = states\n",
     "else:\n",
@@ -283,8 +300,8 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "\n",
-    "# test_wave_path = \"../data/inferMusic/piano_short.wav\"\n",
-    "test_wave_path = \"../data/inferMusic/孤独な巡礼simple.wav\"\n",
+    "test_wave_path = \"../data/inferMusic/piano_short.wav\"\n",
+    "# test_wave_path = \"../data/inferMusic/孤独な巡礼simple.wav\"\n",
     "waveInfo(test_wave_path)\n",
     "\n",
     "waveform, sample_rate = torchaudio.load(test_wave_path, normalize=True)\n",
@@ -339,7 +356,7 @@
    "outputs": [],
    "source": [
     "# final model to be used by others\n",
-    "torch.save(model, \"basicamt_model.pth\")"
+    "torch.save(model, \"basicamt_model_MN.pth\")"
    ]
   }
  ],
