--- a/basicpitch/train_basicpitch.ipynb
+++ b/basicpitch/train_basicpitch.ipynb
@@ -37,15 +37,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "device = \"cuda:1\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "from data.septimbre.data import Instruments\n",
     "dataset = Instruments(\n",
     "    folder = '../data/septimbre/piano_large_short_256',\n",
@@ -165,7 +156,7 @@
     "\n",
     "        val_loss /= len(valloader)\n",
     "    \n",
-    "    final_loss = val_loss * 0.85 + train_loss * 0.15\n",
+    "    final_loss = val_loss\n",
     "    schedular.step(final_loss)\n",
     "\n",
     "    # save checkpoint\n",
