--- a/basicpitch/train_basicpitch2.ipynb
+++ b/basicpitch/train_basicpitch2.ipynb
@@ -101,8 +101,8 @@
     "    print(\"model initialized from BasicPitch\")\n",
     "else:\n",
     "    model = BasicPitch_all(CONFIG.CQT, CQTlearnable=False).to(device)\n",
-    "optimizer = torch.optim.AdamW(model.parameters(), lr=2e-4)\n",
-    "schedular = torch.optim.lr_scheduler.ReduceLROnPlateau(optimizer, mode='min', factor=0.3, patience=2, threshold=1e-3)\n",
+    "optimizer = torch.optim.AdamW(model.parameters(), lr=3e-4)\n",
+    "schedular = torch.optim.lr_scheduler.ReduceLROnPlateau(optimizer, mode='min', factor=0.35, patience=3, threshold=1e-3)\n",
     "checkpoint_path = \"basicpitch_all.pth\"\n",
     "loss_path = \"basicpitch_all.loss.txt\"\n",
     "min_loss = float('inf')\n",
@@ -129,7 +129,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = torch.compile(model).to(device)"
+    "model_train = torch.compile(model.train(), mode='max-autotune')\n",
+    "model_eval = torch.compile(model.eval(), mode='max-autotune')"
    ]
   },
   {
@@ -140,13 +141,13 @@
    "source": [
     "from model.loss import AMT_loss\n",
     "\n",
-    "epoch_total = 50\n",
+    "epoch_total = 60\n",
     "stage_save_interval = 40    # save checkpoint every $stage_save_interval$ epochs\n",
     "\n",
     "optimizer.zero_grad()\n",
     "for epoch in range(epoch_now+1, epoch_total):\n",
     "    # training\n",
-    "    model.train()\n",
+    "    model_train.train()\n",
     "    train_loss = 0\n",
     "    virtual_batch = 0\n",
     "    for (input, target) in tqdm.tqdm(dataloader):\n",
@@ -161,13 +162,13 @@
     "            mixed = input.squeeze(dim=1)\n",
     "            midi_mixed = target.squeeze(dim=1)\n",
     "\n",
-    "        mixed = mixed + torch.randn_like(mixed) * 0.005   # 加入噪声 经过听觉和可视化觉得0.005是一个合适的值\n",
+    "        mixed = mixed + torch.randn_like(mixed) * 0.0005 * torch.rand(mixed.shape[0], 1, 1, device=mixed.device)\n",
     "        # midi_mixed: (batch, 7 * 12, 660)\n",
     "\n",
-    "        onset, note = model(mixed)\n",
+    "        onset, note = model_train(mixed)\n",
     "        # onset & note: (batch, 7 * 12, 660)\n",
-    "        loss = AMT_loss(onset, note, midi_mixed, mse=False)\n",
-    "        # loss = BasicPitch.loss[\"note\"]((midi_mixed == 1).float(), note) + model.loss[\"onset\"]((midi_mixed > 1.5).float(), onset)\n",
+    "        # loss = AMT_loss(onset, note, midi_mixed, mse=False)\n",
+    "        loss = BasicPitch.loss[\"note\"]((midi_mixed == 1).float(), note) + model.loss[\"onset\"]((midi_mixed > 1.5).float(), onset)\n",
     "        train_loss += loss.item()\n",
     "\n",
     "        loss.backward()\n",
@@ -177,7 +178,7 @@
     "    train_loss /= len(dataloader)\n",
     "\n",
     "    # validation\n",
-    "    model.eval()\n",
+    "    model_eval.eval()\n",
     "    val_loss = 0\n",
     "    with torch.no_grad():\n",
     "        for (input, target) in tqdm.tqdm(valloader):\n",
@@ -191,14 +192,14 @@
     "                mixed = input.squeeze(dim=1)\n",
     "                midi_mixed = target.squeeze(dim=1)\n",
     "\n",
-    "            onset, note = model(mixed)\n",
-    "            loss = AMT_loss(onset, note, midi_mixed, mse=False)\n",
-    "            # loss = BasicPitch.loss[\"note\"]((midi_mixed == 1).float(), note) + model.loss[\"onset\"]((midi_mixed > 1.5).float(), onset)\n",
+    "            onset, note = model_eval(mixed)\n",
+    "            # loss = AMT_loss(onset, note, midi_mixed, mse=False)\n",
+    "            loss = BasicPitch.loss[\"note\"]((midi_mixed == 1).float(), note) + model.loss[\"onset\"]((midi_mixed > 1.5).float(), onset)\n",
     "            val_loss += loss.item()\n",
     "\n",
     "        val_loss /= len(valloader)\n",
     "    \n",
-    "    final_loss = val_loss * 0.85 + train_loss * 0.15\n",
+    "    final_loss = val_loss\n",
     "    schedular.step(final_loss)\n",
     "\n",
     "    # save checkpoint\n",
