--- a/evaluate/eval_basicamt_nolog.ipynb
+++ b/evaluate/eval_basicamt_nolog.ipynb
@@ -55,9 +55,10 @@
    "outputs": [],
    "source": [
     "# 得到所有运行结果\n",
+    "model_ = torch.compile(model.eval())\n",
     "with torch.no_grad():\n",
     "    for dataset_folder in dataset_folders:\n",
-    "        amt_dataset(model, dataset_folder, f\"./{model_folder_name}\")"
+    "        amt_dataset(model_, dataset_folder, f\"./{model_folder_name}\")"
    ]
   },
   {
