--- a/septimbre/ablation/rescale/train_musicnet.ipynb
+++ b/septimbre/ablation/rescale/train_musicnet.ipynb
@@ -133,6 +133,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "model_train = model.train()\n",
+    "if not train_amt:\n",
+    "    set_eval_mode(model.note_branch)\n",
+    "model_train = torch.compile(model_train, mode=\"max-autotune\")\n",
+    "model_eval = torch.compile(model.eval(), mode=\"max-autotune\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from model.loss import LossNorm, DWA, PCGrad\n",
     "lossnorm = LossNorm(0.91)\n",
     "dwa = DWA(2)\n",
@@ -169,11 +182,12 @@
     "\n",
     "optimizer_amt.zero_grad()\n",
     "optimizer_cluster.zero_grad()\n",
+    "schedular_cluster.step(epoch=epoch_now)\n",
     "for epoch in range(epoch_now+1, epoch_total):\n",
     "    # training\n",
-    "    model.train()\n",
-    "    if not train_amt:\n",
-    "        set_eval_mode(model.note_branch)\n",
+    "    # model_train.train()\n",
+    "    # if not train_amt:\n",
+    "    #     set_eval_mode(model.note_branch)\n",
     "    train_loss = [0., 0.]\n",
     "    virtual_batch = 0\n",
     "    for (input, target) in tqdm.tqdm(dataloader):\n",
@@ -181,8 +195,8 @@
     "        for i in range(len(target)):\n",
     "            target[i] = target[i].to(device)\n",
     "        # target: list of (mix, notes, time) tensor\n",
-    "\n",
-    "        onset, frame, emb = model(input)\n",
+    "        input = input + torch.randn_like(input) * 0.0005 * torch.rand(input.shape[0], 1, 1, device=input.device)\n",
+    "        onset, frame, emb = model_train(input)\n",
     "        emb = torch.nn.functional.normalize(emb, p=2, dim=1)\n",
     "        clloss, amtloss = SepTimbreAMT_joint.loss(emb, frame, onset, target)\n",
     "        train_loss[0] += clloss.item()\n",
@@ -194,14 +208,14 @@
     "    train_loss[1] /= len(dataset)\n",
     "\n",
     "    # validation\n",
-    "    model.eval()\n",
+    "    # model_eval.eval()\n",
     "    val_loss = [0., 0.]\n",
     "    with torch.no_grad():\n",
     "        for (input, target) in tqdm.tqdm(valloader):\n",
     "            input = input.to(device)\n",
     "            for i in range(len(target)):\n",
     "                target[i] = target[i].to(device)\n",
-    "            onset, frame, emb = model(input)\n",
+    "            onset, frame, emb = model_eval(input)\n",
     "            emb = torch.nn.functional.normalize(emb, p=2, dim=1)\n",
     "            clloss, amtloss = SepTimbreAMT_joint.loss(emb, frame, onset, target)\n",
     "            val_loss[0] += clloss.item()\n",
@@ -213,10 +227,10 @@
     "    train_loss_sum = LossNorm.norm_sum(torch.tensor([train_loss[0], train_loss[1]])).item()\n",
     "    val_loss_sum = LossNorm.norm_sum(torch.tensor([val_loss[0], val_loss[1]])).item()\n",
     "\n",
-    "    final_loss = val_loss_sum * 0.85 + train_loss_sum * 0.15\n",
+    "    final_loss = val_loss[0]    # only care about cluster loss if amt branch is frozen\n",
     "    if train_amt:\n",
-    "        schedular_amt.step(val_loss[1] * 0.85 + train_loss[1] * 0.15)\n",
-    "    # schedular_cluster.step(val_loss[0] * 0.85 + train_loss[0] * 0.15)\n",
+    "        final_loss = val_loss_sum\n",
+    "        schedular_amt.step(val_loss[1])\n",
     "    schedular_cluster.step(epoch=epoch_now)\n",
     "\n",
     "    # save checkpoint\n",
