--- a/septimbre/train_mydata.ipynb
+++ b/septimbre/train_mydata.ipynb
@@ -147,6 +147,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "model_train = model.train()\n",
+    "if not train_amt:\n",
+    "    set_eval_mode(model.note_branch)\n",
+    "model_train = torch.compile(model_train, mode=\"max-autotune\")\n",
+    "model_eval = torch.compile(model.eval(), mode=\"max-autotune\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from model.loss import LossNorm, DWA, PCGrad\n",
     "lossnorm = LossNorm(0.91)\n",
     "dwa = DWA(2)\n",
@@ -178,29 +191,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "epoch_total = 64\n",
-    "stage_save_interval = 80    # save checkpoint every $stage_save_interval$ epochs\n",
+    "epoch_total = 62\n",
+    "stage_save_interval = 40    # save checkpoint every $stage_save_interval$ epochs\n",
     "\n",
     "optimizer_amt.zero_grad()\n",
     "optimizer_cluster.zero_grad()\n",
+    "schedular_cluster.step(epoch=epoch_now)\n",
     "for epoch in range(epoch_now+1, epoch_total):\n",
     "    # training\n",
-    "    model.train()\n",
+    "    # model_train.train()\n",
+    "    # if not train_amt:\n",
+    "    #     set_eval_mode(model.note_branch)\n",
     "    train_loss = [0., 0.]\n",
     "    virtual_batch = 0\n",
-    "\n",
     "    for (input, target) in tqdm.tqdm(train3loader):\n",
     "        input = input.to(device)    # input: (batch, mix, 2, time)\n",
     "        target = target.to(device)  # target: (batch, mix, 7 * 12, 660)\n",
     "\n",
-    "        if dataset.mix > 1:\n",
-    "            mixed = torch.mean(input, dim=1, keepdim=False)  # 混合后的CQT\n",
+    "        if train_3.mix > 1:\n",
+    "            w = torch.rand(train_3.mix, device=input.device) * (0.4) + 0.8\n",
+    "            mixed = torch.sum(input * w.view(1, -1, 1, 1), dim=1, keepdim=False) / torch.sum(w)\n",
+    "            midi_mixed, _ = target.max(dim=-3, keepdim=False)\n",
     "        else:\n",
     "            mixed = input.squeeze(dim=1)\n",
+    "            midi_mixed = target.squeeze(dim=1)\n",
     "\n",
-    "        mixed = mixed + torch.randn_like(mixed) * 0.002   # 加入噪声\n",
-    "\n",
-    "        onset, frame, emb = model(mixed)\n",
+    "        # midi_mixed: (batch, 7 * 12, 660)\n",
+    "        # mixed: (batch, 1, samples)\n",
+    "        mixed = mixed + torch.randn_like(mixed) * 0.0005 * torch.rand(mixed.shape[0], 1, 1, device=mixed.device)\n",
+    "        onset, frame, emb = model_train(mixed)\n",
     "        emb = torch.nn.functional.normalize(emb, p=2, dim=1)\n",
     "        clloss, amtloss = SepTimbreAMT.loss(emb, frame, onset, target)\n",
     "        train_loss[0] += clloss.item()\n",
@@ -214,13 +233,18 @@
     "        target = target.to(device)  # target: (batch, mix, 7 * 12, 660)\n",
     "\n",
     "        if dataset.mix > 1:\n",
-    "            mixed = torch.mean(input, dim=1, keepdim=False)  # 混合后的CQT\n",
+    "            w = torch.rand(dataset.mix, device=input.device) * (0.4) + 0.8\n",
+    "            mixed = torch.sum(input * w.view(1, -1, 1, 1), dim=1, keepdim=False) / torch.sum(w)\n",
+    "            midi_mixed, _ = target.max(dim=-3, keepdim=False)\n",
     "        else:\n",
     "            mixed = input.squeeze(dim=1)\n",
+    "            midi_mixed = target.squeeze(dim=1)\n",
     "\n",
-    "        mixed = mixed + torch.randn_like(mixed) * 0.004   # 加入噪声\n",
+    "        # midi_mixed: (batch, 7 * 12, 660)\n",
+    "        # mixed: (batch, 1, samples)\n",
+    "        mixed = mixed + torch.randn_like(mixed) * 0.0005 * torch.rand(mixed.shape[0], 1, 1, device=mixed.device)\n",
     "\n",
-    "        onset, frame, emb = model(mixed)\n",
+    "        onset, frame, emb = model_train(mixed)\n",
     "        emb = torch.nn.functional.normalize(emb, p=2, dim=1)\n",
     "        clloss, amtloss = SepTimbreAMT.loss(emb, frame, onset, target)\n",
     "        train_loss[0] += clloss.item()\n",
@@ -236,7 +260,7 @@
     "    train_loss[1] /= len(dataset) + len(train_3)\n",
     "\n",
     "    # validation\n",
-    "    model.eval()\n",
+    "    # model_eval.eval()\n",
     "    val_loss = [0., 0.]\n",
     "    with torch.no_grad():\n",
     "        for (input, target) in tqdm.tqdm(valloader):\n",
@@ -248,7 +272,7 @@
     "            else:\n",
     "                mixed = input.squeeze(dim=1)\n",
     "\n",
-    "            onset, frame, emb = model(mixed)\n",
+    "            onset, frame, emb = model_eval(mixed)\n",
     "            emb = torch.nn.functional.normalize(emb, p=2, dim=1)\n",
     "            clloss, amtloss = SepTimbreAMT.loss(emb, frame, onset, target)\n",
     "            val_loss[0] += clloss.item()\n",
@@ -264,10 +288,11 @@
     "        train_loss_sum = train_loss[0]\n",
     "        val_loss_sum = val_loss[0]\n",
     "\n",
-    "    final_loss = val_loss_sum * 0.85 + train_loss_sum * 0.15\n",
+    "    final_loss = val_loss[0]\n",
     "    if train_amt:\n",
-    "        schedular_amt.step(val_loss[1] * 0.85 + train_loss[1] * 0.15)\n",
-    "    # schedular_cluster.step(val_loss[0] * 0.85 + train_loss[0] * 0.15)\n",
+    "        final_loss = val_loss_sum\n",
+    "        schedular_amt.step(val_loss[1])\n",
+    "    # schedular_cluster.step(val_loss[0])\n",
     "    schedular_cluster.step(epoch=epoch_now)\n",
     "\n",
     "    # save checkpoint\n",
