--- a/basicamt/ablation/dilatedConv/train_basicamt2_noDilation.ipynb
+++ b/basicamt/ablation/dilatedConv/train_basicamt2_noDilation.ipynb
@@ -91,8 +91,8 @@
     "    print(\"model initialized from BasicAMT\")\n",
     "else:\n",
     "    model = BasicAMT_all_noDilation(CONFIG.CQT, CQTlearnable=False).to(device)\n",
-    "optimizer = torch.optim.AdamW(model.parameters(), lr=2e-4)\n",
-    "schedular = torch.optim.lr_scheduler.ReduceLROnPlateau(optimizer, mode='min', factor=0.3, patience=2, threshold=1e-3)\n",
+    "optimizer = torch.optim.AdamW(model.parameters(), lr=3e-4)\n",
+    "schedular = torch.optim.lr_scheduler.ReduceLROnPlateau(optimizer, mode='min', factor=0.35, patience=3, threshold=1e-3)\n",
     "checkpoint_path = \"basicamt_all_noDilation.pth\"\n",
     "loss_path = \"basicamt_all_noDilation.loss.txt\"\n",
     "min_loss = float('inf')\n",
@@ -119,7 +119,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = torch.compile(model)"
+    "model_train = torch.compile(model.train(), mode=\"max-autotune\")\n",
+    "model_eval = torch.compile(model.eval(), mode=\"max-autotune\")"
    ]
   },
   {
@@ -128,13 +129,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "epoch_total = 50\n",
+    "epoch_total = 60\n",
     "stage_save_interval = 40    # save checkpoint every $stage_save_interval$ epochs\n",
     "\n",
     "optimizer.zero_grad()\n",
     "for epoch in range(epoch_now+1, epoch_total):\n",
     "    # training\n",
-    "    model.train()\n",
+    "    model_train.train()\n",
     "    train_loss = 0\n",
     "    virtual_batch = 0\n",
     "    for (input, target) in tqdm.tqdm(dataloader):\n",
@@ -149,10 +150,10 @@
     "            mixed = input.squeeze(dim=1)\n",
     "            midi_mixed = target.squeeze(dim=1)\n",
     "\n",
-    "        mixed = mixed + torch.randn_like(mixed) * 0.005   # 加入噪声 经过听觉和可视化觉得0.005是一个合适的值\n",
+    "        mixed = mixed + torch.randn_like(mixed) * 0.0005 * torch.rand(mixed.shape[0], 1, 1, device=mixed.device)\n",
     "        # midi_mixed: (batch, 7 * 12, 660)\n",
     "\n",
-    "        onset, note = model(mixed)\n",
+    "        onset, note = model_train(mixed)\n",
     "        # onset & note: (batch, 7 * 12, 660)\n",
     "        loss = BasicAMT_noDilation.loss(onset, note, midi_mixed)\n",
     "        train_loss += loss.item()\n",
@@ -165,7 +166,7 @@
     "    train_loss /= len(dataloader)\n",
     "\n",
     "    # validation\n",
-    "    model.eval()\n",
+    "    model_eval.eval()\n",
     "    val_loss = 0\n",
     "    with torch.no_grad():\n",
     "        for (input, target) in tqdm.tqdm(valloader):\n",
@@ -179,7 +180,7 @@
     "                mixed = input.squeeze(dim=1)\n",
     "                midi_mixed = target.squeeze(dim=1)\n",
     "\n",
-    "            onset, note = model(mixed)\n",
+    "            onset, note = model_eval(mixed)\n",
     "            loss = BasicAMT_noDilation.loss(onset, note, midi_mixed)\n",
     "            val_loss += loss.item()\n",
     "\n",
@@ -352,7 +353,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "timbreamt (3.12.12)",
+   "display_name": "timbreamt",
    "language": "python",
    "name": "python3"
   },
