--- a/basicamt/train_basicamt2.ipynb
+++ b/basicamt/train_basicamt2.ipynb
@@ -23,7 +23,7 @@
     "from utils.checkpoint import save_ckpt_template as save_ckpt, load_ckpt_template as load_ckpt\n",
     "\n",
     "if torch.cuda.is_available():\n",
-    "    device = torch.device('cuda:1')\n",
+    "    device = torch.device('cuda')\n",
     "    torch.backends.cudnn.benchmark = True   # 加速卷积计算\n",
     "else:\n",
     "    device = torch.device('cpu')\n",
@@ -99,8 +99,8 @@
     "    print(\"model initialized from BasicAMT\")\n",
     "else:\n",
     "    model = BasicAMT_all(CONFIG.CQT, CQTlearnable=False).to(device)\n",
-    "optimizer = torch.optim.AdamW(model.parameters(), lr=2e-4)\n",
-    "schedular = torch.optim.lr_scheduler.ReduceLROnPlateau(optimizer, mode='min', factor=0.3, patience=2, threshold=1e-3)\n",
+    "optimizer = torch.optim.AdamW(model.parameters(), lr=3e-4)\n",
+    "schedular = torch.optim.lr_scheduler.ReduceLROnPlateau(optimizer, mode='min', factor=0.35, patience=3, threshold=1e-3)\n",
     "checkpoint_path = \"basicamt_all.pth\"\n",
     "loss_path = \"basicamt_all.loss.txt\"\n",
     "min_loss = float('inf')\n",
@@ -127,31 +127,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "epoch_total = 50\n",
+    "model_train = torch.compile(model.train(), mode=\"max-autotune\")\n",
+    "model_eval = torch.compile(model.eval(), mode=\"max-autotune\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "epoch_total = 60\n",
     "stage_save_interval = 40    # save checkpoint every $stage_save_interval$ epochs\n",
     "\n",
     "optimizer.zero_grad()\n",
     "for epoch in range(epoch_now+1, epoch_total):\n",
     "    # training\n",
-    "    model.train()\n",
+    "    model_train.train()\n",
     "    train_loss = 0\n",
     "    virtual_batch = 0\n",
     "    for (input, target) in tqdm.tqdm(dataloader):\n",
-    "        input = input.to(device)    # input: (batch, mix, 2, time)\n",
+    "        input = input.to(device)    # input: (batch, mix, 1, time)\n",
     "        target = target.to(device)  # target: (batch, mix, 7 * 12, 660)\n",
     "\n",
     "        # 由于basicamt的目标没有分离音色，因此mix仅仅是数据增强的手段\n",
     "        if dataset.mix > 1:\n",
-    "            mixed = torch.mean(input, dim=1, keepdim=False)  # 混合后的CQT\n",
+    "            w = torch.rand(dataset.mix, device=input.device) * (0.4) + 0.8\n",
+    "            mixed = torch.sum(input * w.view(1, -1, 1, 1), dim=1, keepdim=False) / torch.sum(w)\n",
     "            midi_mixed, _ = target.max(dim=-3, keepdim=False)\n",
     "        else:\n",
     "            mixed = input.squeeze(dim=1)\n",
     "            midi_mixed = target.squeeze(dim=1)\n",
     "\n",
-    "        mixed = mixed + torch.randn_like(mixed) * 0.005   # 加入噪声 经过听觉和可视化觉得0.005是一个合适的值\n",
     "        # midi_mixed: (batch, 7 * 12, 660)\n",
-    "\n",
-    "        onset, note = model(mixed)\n",
+    "        # mixed: (batch, 1, samples)\n",
+    "        mixed = mixed + torch.randn_like(mixed) * 0.0005 * torch.rand(mixed.shape[0], 1, 1, device=mixed.device)\n",
+    "        onset, note = model_train(mixed)\n",
     "        # onset & note: (batch, 7 * 12, 660)\n",
     "        loss = BasicAMT.loss(onset, note, midi_mixed)\n",
     "        train_loss += loss.item()\n",
@@ -164,7 +175,7 @@
     "    train_loss /= len(dataloader)\n",
     "\n",
     "    # validation\n",
-    "    model.eval()\n",
+    "    model_eval.eval()\n",
     "    val_loss = 0\n",
     "    with torch.no_grad():\n",
     "        for (input, target) in tqdm.tqdm(valloader):\n",
@@ -178,13 +189,13 @@
     "                mixed = input.squeeze(dim=1)\n",
     "                midi_mixed = target.squeeze(dim=1)\n",
     "\n",
-    "            onset, note = model(mixed)\n",
+    "            onset, note = model_eval(mixed)\n",
     "            loss = BasicAMT.loss(onset, note, midi_mixed)\n",
     "            val_loss += loss.item()\n",
     "\n",
     "        val_loss /= len(valloader)\n",
     "    \n",
-    "    final_loss = val_loss * 0.85 + train_loss * 0.15\n",
+    "    final_loss = val_loss\n",
     "    schedular.step(final_loss)\n",
     "\n",
     "    # save checkpoint\n",
@@ -271,6 +282,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "model = torch.load(\"./best_basicamt_model.pth\", weights_only=False).to('cpu')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# 切换到cpu 因为benchmark会导致初次运行时间长\n",
     "device = torch.device('cpu')\n",
     "model = model.to(device)\n",
@@ -290,7 +310,7 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "\n",
-    "#test_wave_path = \"../data/inferMusic/piano_short.wav\"\n",
+    "# test_wave_path = \"../data/inferMusic/piano_short.wav\"\n",
     "test_wave_path = \"../data/inferMusic/孤独な巡礼simple.wav\"\n",
     "waveInfo(test_wave_path)\n",
     "\n",
