--- a/basicpitch/train_basicpitch_musicnet.ipynb
+++ b/basicpitch/train_basicpitch_musicnet.ipynb
@@ -109,7 +109,7 @@
     "else:\n",
     "    model = BasicPitch_all(CONFIG.CQT, CQTlearnable=False).to(device)\n",
     "optimizer = torch.optim.AdamW(model.parameters(), lr=2e-4)\n",
-    "schedular = torch.optim.lr_scheduler.ReduceLROnPlateau(optimizer, mode='min', factor=0.3, patience=2, threshold=1e-3)\n",
+    "schedular = torch.optim.lr_scheduler.ReduceLROnPlateau(optimizer, mode='min', factor=0.3, patience=3, threshold=1e-3)\n",
     "checkpoint_path = \"basicpitch_all.pth\"\n",
     "loss_path = \"basicpitch_all.loss.txt\"\n",
     "min_loss = float('inf')\n",
@@ -136,25 +136,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "model_train = torch.compile(model.train(), mode='max-autotune')\n",
+    "model_eval = torch.compile(model.eval(), mode='max-autotune')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from model.loss import AMT_loss\n",
     "\n",
-    "epoch_total = 45\n",
+    "epoch_total = 60\n",
     "stage_save_interval = 40    # save checkpoint every $stage_save_interval$ epochs\n",
     "\n",
     "optimizer.zero_grad()\n",
     "for epoch in range(epoch_now+1, epoch_total):\n",
     "    # training\n",
-    "    model.train()\n",
+    "    model_train.train()\n",
     "    train_loss = 0\n",
     "    virtual_batch = 0\n",
     "    for (input, target) in tqdm.tqdm(dataloader):\n",
     "        target = [x.max(dim=0)[0] for x in target]\n",
     "        target = torch.stack(target, dim=0).to(device) # target: (batch, mix, 7 * 12, frames)\n",
     "\n",
-    "        # input = input + torch.randn_like(input) * 0.001\n",
     "        input = input.to(device)    # input: (batch, channel, time)\n",
+    "        input = input + torch.randn_like(input) * 0.0005 * torch.rand(input.shape[0], 1, 1, device=input.device)\n",
     "\n",
-    "        onset, note = model(input)\n",
+    "        onset, note = model_train(input)\n",
     "        # onset & note: (batch, 7 * 12, 660)\n",
     "        loss = AMT_loss(onset, note, target, mse=False)\n",
     "        train_loss += loss.item()\n",
@@ -166,28 +176,21 @@
     "    train_loss /= len(dataloader)\n",
     "\n",
     "    # validation\n",
-    "    model.eval()\n",
+    "    model_eval.eval()\n",
     "    val_loss = 0\n",
     "    with torch.no_grad():\n",
     "        for (input, target) in tqdm.tqdm(valloader):\n",
     "            target = [x.max(dim=0)[0] for x in target]\n",
     "            target = torch.stack(target, dim=0).to(device) # target: (batch, mix, 7 * 12, frames)\n",
     "            input = input.to(device)\n",
-    "\n",
-    "            target = target.max(dim=0).values\n",
-    "\n",
-    "            onset, note = model(input)\n",
+    "            onset, note = model_eval(input)\n",
     "            loss = AMT_loss(onset, note, target, mse=False)\n",
     "            val_loss += loss.item()\n",
     "\n",
     "        val_loss /= len(valloader)\n",
     "    \n",
-    "    final_loss = val_loss * 0.85 + train_loss * 0.15\n",
+    "    final_loss = val_loss\n",
     "    schedular.step(final_loss)\n",
-    "\n",
-    "    # on early epochs, val loss will increase a lot.\n",
-    "    if epoch == 20:\n",
-    "        min_loss = float('inf')  # reset min_loss to avoid lr drop too early\n",
     "\n",
     "    # save checkpoint\n",
     "    checkpoint_filename = f\"epoch{epoch}.pth\" if epoch % stage_save_interval == 0 else checkpoint_path\n",
