--- a/evaluate/eval_basicamt.ipynb
+++ b/evaluate/eval_basicamt.ipynb
@@ -41,7 +41,7 @@
    "source": [
     "model_folder_name = \"basicamt\"\n",
     "sys.path.append(f'../{model_folder_name}')\n",
-    "model = torch.load(f\"../{model_folder_name}/best_basicamt_model.pth\", weights_only=False)\n",
+    "model = torch.load(f\"../{model_folder_name}/basicamt_model.pth\", weights_only=False)\n",
     "model.eval()"
    ]
   },
@@ -99,7 +99,7 @@
     "# 看BACH10独奏的结果\n",
     "npyfolder = f\"{model_folder_name}/BACH10_eval\"\n",
     "npys = [os.path.join(npyfolder, f) for f in os.listdir(npyfolder) if not f.endswith(\"0.npy\")]\n",
-    "best_thre, max_acc, max_p, max_r, max_f1 = find_best_threshold(npys, (0.4, 0.5), step_num=10, generation=4, log=True)\n",
+    "best_thre, max_acc, max_p, max_r, max_f1 = find_best_threshold(npys, (0.4, 0.6), step_num=10, generation=4, log=True)\n",
     "print(\"note level evaluation at best threshold:\")\n",
     "best_onset_thre, note_p, note_r, note_f, note_overlap = find_best_onset_threshold(npys, best_thre, (0.2, 0.6), step_num=10, generation=4, log=True)\n",
     "\n",
@@ -115,9 +115,9 @@
     "# 看PHENICX合奏音频的结果\n",
     "npyfolder = f\"{model_folder_name}/PHENICX_eval\"\n",
     "npys = [os.path.join(npyfolder, f) for f in os.listdir(npyfolder) if f.endswith(\".npy\")]\n",
-    "best_thre, max_acc, max_p, max_r, max_f1 = find_best_threshold(npys, (0.02, 0.2), step_num=10, generation=4, log=True)\n",
+    "best_thre, max_acc, max_p, max_r, max_f1 = find_best_threshold(npys, (0.02, 0.22), step_num=10, generation=4, log=True)\n",
     "print(\"note level evaluation at best threshold:\")\n",
-    "best_onset_thre, note_p, note_r, note_f, note_overlap = find_best_onset_threshold(npys, best_thre, (0.13, 0.6), step_num=10, generation=4, log=True)\n",
+    "best_onset_thre, note_p, note_r, note_f, note_overlap = find_best_onset_threshold(npys, best_thre, (0.13, 0.53), step_num=10, generation=4, log=True)\n",
     "\n",
     "output_results.extend([best_thre, max_acc, max_p, max_r, max_f1, best_onset_thre, note_p, note_r, note_f, note_overlap])"
    ]
@@ -133,7 +133,7 @@
     "npys = [os.path.join(npyfolder, f) for f in os.listdir(npyfolder) if f.endswith(\"0.npy\")]\n",
     "best_thre, max_acc, max_p, max_r, max_f1 = find_best_threshold(npys, (0.1, 0.5), step_num=10, generation=4, log=True)\n",
     "print(\"note level evaluation at best threshold:\")\n",
-    "best_onset_thre, note_p, note_r, note_f, note_overlap = find_best_onset_threshold(npys, best_thre, (0.15, 0.6), step_num=10, generation=4, log=True)\n",
+    "best_onset_thre, note_p, note_r, note_f, note_overlap = find_best_onset_threshold(npys, best_thre, (0.15, 0.55), step_num=10, generation=4, log=True)\n",
     "\n",
     "output_results.extend([best_thre, max_acc, max_p, max_r, max_f1, best_onset_thre, note_p, note_r, note_f, note_overlap])"
    ]
