--- a/evaluate/eval_septimbre_orthogonal.ipynb
+++ b/evaluate/eval_septimbre_orthogonal.ipynb
@@ -77,6 +77,7 @@
    "source": [
     "# 为了方便粘贴到excel\n",
     "output_results = {}\n",
+    "frame_level_cluster = True\n",
     "def print_results(results):\n",
     "    result_arr = []\n",
     "    for key, detail in results.items():\n",
@@ -96,7 +97,7 @@
     "best_thre, max_acc, max_p, max_r, max_f1 = find_best_threshold(npys, (0.3, 0.8), step_num=6, generation=5, log=True)\n",
     "print(\"note level evaluation at best threshold:\")\n",
     "best_onset_thre, note_p, note_r, note_f, note_overlap = find_best_onset_threshold(npys, best_thre, (0.3, 0.9), step_num=6, generation=5, log=True)\n",
-    "sep_P, sep_R, sep_F, sep_Overlap = evaluate_sep_note_dataset(npyfolder, frame_thresh=best_thre, onset_thresh=best_onset_thre, mix=2, log=True)\n",
+    "(sep_P, sep_R, sep_F, sep_Overlap), (f_sep_P, f_sep_R, f_sep_F, f_sep_Overlap) = evaluate_sep_note_dataset(npyfolder, frame_thresh=best_thre, onset_thresh=best_onset_thre, mix=2, log=True, frame_level=frame_level_cluster)\n",
     "\n",
     "output_results[\"BACH10_2mix\"] = {\n",
     "    \"frame_thre\": best_thre,\n",
@@ -113,6 +114,10 @@
     "    \"sep_r\": sep_R,\n",
     "    \"sep_f\": sep_F,\n",
     "    \"sep_overlap\": sep_Overlap,\n",
+    "    \"frame_sep_p\": f_sep_P,\n",
+    "    \"frame_sep_r\": f_sep_R,\n",
+    "    \"frame_sep_f\": f_sep_F,\n",
+    "    \"frame_sep_overlap\": f_sep_Overlap\n",
     "}"
    ]
   },
@@ -128,7 +133,7 @@
     "best_thre, max_acc, max_p, max_r, max_f1 = find_best_threshold(npys, (0.1, 0.6), step_num=6, generation=5, log=True)\n",
     "print(\"note level evaluation at best threshold:\")\n",
     "best_onset_thre, note_p, note_r, note_f, note_overlap = find_best_onset_threshold(npys, best_thre, (0.2, 0.8), step_num=6, generation=5, log=True)\n",
-    "sep_P, sep_R, sep_F, sep_Overlap = evaluate_sep_note_dataset(npyfolder, frame_thresh=best_thre, onset_thresh=best_onset_thre, mix=3, log=True)\n",
+    "(sep_P, sep_R, sep_F, sep_Overlap), (f_sep_P, f_sep_R, f_sep_F, f_sep_Overlap) = evaluate_sep_note_dataset(npyfolder, frame_thresh=best_thre, onset_thresh=best_onset_thre, mix=3, log=True, frame_level=frame_level_cluster)\n",
     "\n",
     "output_results[\"BACH10_3mix\"] = {\n",
     "    \"frame_thre\": best_thre,\n",
@@ -145,6 +150,10 @@
     "    \"sep_r\": sep_R,\n",
     "    \"sep_f\": sep_F,\n",
     "    \"sep_overlap\": sep_Overlap,\n",
+    "    \"frame_sep_p\": f_sep_P,\n",
+    "    \"frame_sep_r\": f_sep_R,\n",
+    "    \"frame_sep_f\": f_sep_F,\n",
+    "    \"frame_sep_overlap\": f_sep_Overlap\n",
     "}"
    ]
   },
@@ -160,7 +169,7 @@
     "best_thre, max_acc, max_p, max_r, max_f1 = find_best_threshold(npys, (0.1, 0.6), step_num=6, generation=5, log=True)\n",
     "print(\"note level evaluation at best threshold:\")\n",
     "best_onset_thre, note_p, note_r, note_f, note_overlap = find_best_onset_threshold(npys, best_thre, (0.2, 0.8), step_num=6, generation=5, log=True)\n",
-    "sep_P, sep_R, sep_F, sep_Overlap = evaluate_sep_note_dataset(npyfolder, frame_thresh=best_thre, onset_thresh=best_onset_thre, mix=4, log=True)\n",
+    "(sep_P, sep_R, sep_F, sep_Overlap), (f_sep_P, f_sep_R, f_sep_F, f_sep_Overlap) = evaluate_sep_note_dataset(npyfolder, frame_thresh=best_thre, onset_thresh=best_onset_thre, mix=4, log=True, frame_level=frame_level_cluster)\n",
     "output_results[\"BACH10_4mix\"] = {\n",
     "    \"frame_thre\": best_thre,\n",
     "    \"frame_acc\": max_acc,\n",
@@ -176,6 +185,10 @@
     "    \"sep_r\": sep_R,\n",
     "    \"sep_f\": sep_F,\n",
     "    \"sep_overlap\": sep_Overlap,\n",
+    "    \"frame_sep_p\": f_sep_P,\n",
+    "    \"frame_sep_r\": f_sep_R,\n",
+    "    \"frame_sep_f\": f_sep_F,\n",
+    "    \"frame_sep_overlap\": f_sep_Overlap\n",
     "}"
    ]
   },
@@ -191,7 +204,7 @@
     "best_thre, max_acc, max_p, max_r, max_f1 = find_best_threshold(npys, (0.1, 0.6), step_num=6, generation=5, log=True)\n",
     "print(\"note level evaluation at best threshold:\")\n",
     "best_onset_thre, note_p, note_r, note_f, note_overlap = find_best_onset_threshold(npys, best_thre, (0.2, 0.6), step_num=6, generation=5, log=True)\n",
-    "sep_P, sep_R, sep_F, sep_Overlap = evaluate_sep_note_dataset(npyfolder, frame_thresh=best_thre, onset_thresh=best_onset_thre, mix=2, log=True)\n",
+    "(sep_P, sep_R, sep_F, sep_Overlap), (f_sep_P, f_sep_R, f_sep_F, f_sep_Overlap) = evaluate_sep_note_dataset(npyfolder, frame_thresh=best_thre, onset_thresh=best_onset_thre, mix=2, log=True, frame_level=frame_level_cluster)\n",
     "output_results[\"URMP_2mix\"] = {\n",
     "    \"frame_thre\": best_thre,\n",
     "    \"frame_acc\": max_acc,\n",
@@ -207,6 +220,10 @@
     "    \"sep_r\": sep_R,\n",
     "    \"sep_f\": sep_F,\n",
     "    \"sep_overlap\": sep_Overlap,\n",
+    "    \"frame_sep_p\": f_sep_P,\n",
+    "    \"frame_sep_r\": f_sep_R,\n",
+    "    \"frame_sep_f\": f_sep_F,\n",
+    "    \"frame_sep_overlap\": f_sep_Overlap\n",
     "}"
    ]
   },
@@ -222,7 +239,7 @@
     "best_thre, max_acc, max_p, max_r, max_f1 = find_best_threshold(npys, (0.1, 0.6), step_num=6, generation=5, log=True)\n",
     "print(\"note level evaluation at best threshold:\")\n",
     "best_onset_thre, note_p, note_r, note_f, note_overlap = find_best_onset_threshold(npys, best_thre, (0.2, 0.6), step_num=6, generation=5, log=True)\n",
-    "sep_P, sep_R, sep_F, sep_Overlap = evaluate_sep_note_dataset(npyfolder, frame_thresh=best_thre, onset_thresh=best_onset_thre, mix=3, log=True)\n",
+    "(sep_P, sep_R, sep_F, sep_Overlap), (f_sep_P, f_sep_R, f_sep_F, f_sep_Overlap) = evaluate_sep_note_dataset(npyfolder, frame_thresh=best_thre, onset_thresh=best_onset_thre, mix=3, log=True, frame_level=frame_level_cluster)\n",
     "output_results[\"URMP_3mix\"] = {\n",
     "    \"frame_thre\": best_thre,\n",
     "    \"frame_acc\": max_acc,\n",
@@ -238,6 +255,10 @@
     "    \"sep_r\": sep_R,\n",
     "    \"sep_f\": sep_F,\n",
     "    \"sep_overlap\": sep_Overlap,\n",
+    "    \"frame_sep_p\": f_sep_P,\n",
+    "    \"frame_sep_r\": f_sep_R,\n",
+    "    \"frame_sep_f\": f_sep_F,\n",
+    "    \"frame_sep_overlap\": f_sep_Overlap\n",
     "}"
    ]
   },
@@ -258,12 +279,16 @@
     "npys = [os.path.join(npyfolder, f) for f in os.listdir(npyfolder) if ifNmix(f, 2)]\n",
     "best_thre = 0.391975565736498\n",
     "best_onset_thre = 0.585714285714285\n",
-    "sep_P, sep_R, sep_F, sep_Overlap = evaluate_sep_note_dataset(npyfolder, frame_thresh=best_thre, onset_thresh=best_onset_thre, mix=2, log=True)\n",
+    "(sep_P, sep_R, sep_F, sep_Overlap), (f_sep_P, f_sep_R, f_sep_F, f_sep_Overlap) = evaluate_sep_note_dataset(npyfolder, frame_thresh=best_thre, onset_thresh=best_onset_thre, mix=2, log=True, frame_level=frame_level_cluster)\n",
     "output_results[\"BACH10_2mix_fixed\"] = {\n",
     "    \"sep_p\": sep_P,\n",
     "    \"sep_r\": sep_R,\n",
     "    \"sep_f\": sep_F,\n",
     "    \"sep_overlap\": sep_Overlap,\n",
+    "    \"frame_sep_p\": f_sep_P,\n",
+    "    \"frame_sep_r\": f_sep_R,\n",
+    "    \"frame_sep_f\": f_sep_F,\n",
+    "    \"frame_sep_overlap\": f_sep_Overlap\n",
     "}"
    ]
   },
@@ -277,12 +302,16 @@
     "npys = [os.path.join(npyfolder, f) for f in os.listdir(npyfolder) if ifNmix(f, 3)]\n",
     "best_thre = 0.334902124114952\n",
     "best_onset_thre = 0.544897959183673\n",
-    "sep_P, sep_R, sep_F, sep_Overlap = evaluate_sep_note_dataset(npyfolder, frame_thresh=best_thre, onset_thresh=best_onset_thre, mix=3, log=True)\n",
+    "(sep_P, sep_R, sep_F, sep_Overlap), (f_sep_P, f_sep_R, f_sep_F, f_sep_Overlap) = evaluate_sep_note_dataset(npyfolder, frame_thresh=best_thre, onset_thresh=best_onset_thre, mix=3, log=True, frame_level=frame_level_cluster)\n",
     "output_results[\"BACH10_3mix_fixed\"] = {\n",
     "    \"sep_p\": sep_P,\n",
     "    \"sep_r\": sep_R,\n",
     "    \"sep_f\": sep_F,\n",
     "    \"sep_overlap\": sep_Overlap,\n",
+    "    \"frame_sep_p\": f_sep_P,\n",
+    "    \"frame_sep_r\": f_sep_R,\n",
+    "    \"frame_sep_f\": f_sep_F,\n",
+    "    \"frame_sep_overlap\": f_sep_Overlap\n",
     "}"
    ]
   },
@@ -296,12 +325,16 @@
     "npys = [os.path.join(npyfolder, f) for f in os.listdir(npyfolder) if ifNmix(f, 4)]\n",
     "best_thre = 0.270068027210884\n",
     "best_onset_thre = 0.535276967930029\n",
-    "sep_P, sep_R, sep_F, sep_Overlap = evaluate_sep_note_dataset(npyfolder, frame_thresh=best_thre, onset_thresh=best_onset_thre, mix=4, log=True)\n",
+    "(sep_P, sep_R, sep_F, sep_Overlap), (f_sep_P, f_sep_R, f_sep_F, f_sep_Overlap) = evaluate_sep_note_dataset(npyfolder, frame_thresh=best_thre, onset_thresh=best_onset_thre, mix=4, log=True, frame_level=frame_level_cluster)\n",
     "output_results[\"BACH10_4mix_fixed\"] = {\n",
     "    \"sep_p\": sep_P,\n",
     "    \"sep_r\": sep_R,\n",
     "    \"sep_f\": sep_F,\n",
     "    \"sep_overlap\": sep_Overlap,\n",
+    "    \"frame_sep_p\": f_sep_P,\n",
+    "    \"frame_sep_r\": f_sep_R,\n",
+    "    \"frame_sep_f\": f_sep_F,\n",
+    "    \"frame_sep_overlap\": f_sep_Overlap\n",
     "}"
    ]
   },
@@ -315,12 +348,16 @@
     "npys = [os.path.join(npyfolder, f) for f in os.listdir(npyfolder) if ifNmix(f, 2)]\n",
     "best_thre = 0.314008052200472\n",
     "best_onset_thre = 0.39047619047619\n",
-    "sep_P, sep_R, sep_F, sep_Overlap = evaluate_sep_note_dataset(npyfolder, frame_thresh=best_thre, onset_thresh=best_onset_thre, mix=2, log=True)\n",
+    "(sep_P, sep_R, sep_F, sep_Overlap), (f_sep_P, f_sep_R, f_sep_F, f_sep_Overlap) = evaluate_sep_note_dataset(npyfolder, frame_thresh=best_thre, onset_thresh=best_onset_thre, mix=2, log=True, frame_level=frame_level_cluster)\n",
     "output_results[\"URMP_2mix_fixed\"] = {\n",
     "    \"sep_p\": sep_P,\n",
     "    \"sep_r\": sep_R,\n",
     "    \"sep_f\": sep_F,\n",
     "    \"sep_overlap\": sep_Overlap,\n",
+    "    \"frame_sep_p\": f_sep_P,\n",
+    "    \"frame_sep_r\": f_sep_R,\n",
+    "    \"frame_sep_f\": f_sep_F,\n",
+    "    \"frame_sep_overlap\": f_sep_Overlap\n",
     "}"
    ]
   },
@@ -332,12 +369,18 @@
    "source": [
     "npyfolder = f\"{model_folder_name}/URMP_eval\"\n",
     "npys = [os.path.join(npyfolder, f) for f in os.listdir(npyfolder) if ifNmix(f, 3)]\n",
-    "sep_P, sep_R, sep_F, sep_Overlap = evaluate_sep_note_dataset(npyfolder, frame_thresh=best_thre, onset_thresh=best_onset_thre, mix=3, log=True)\n",
+    "best_thre = 0.254067749548799\n",
+    "best_onset_thre = 0.369096209912536\n",
+    "(sep_P, sep_R, sep_F, sep_Overlap), (f_sep_P, f_sep_R, f_sep_F, f_sep_Overlap) = evaluate_sep_note_dataset(npyfolder, frame_thresh=best_thre, onset_thresh=best_onset_thre, mix=3, log=True, frame_level=frame_level_cluster)\n",
     "output_results[\"URMP_3mix_fixed\"] = {\n",
     "    \"sep_p\": sep_P,\n",
     "    \"sep_r\": sep_R,\n",
     "    \"sep_f\": sep_F,\n",
     "    \"sep_overlap\": sep_Overlap,\n",
+    "    \"frame_sep_p\": f_sep_P,\n",
+    "    \"frame_sep_r\": f_sep_R,\n",
+    "    \"frame_sep_f\": f_sep_F,\n",
+    "    \"frame_sep_overlap\": f_sep_Overlap\n",
     "}"
    ]
   },
