--- a/onsets_frames/train_of.ipynb
+++ b/onsets_frames/train_of.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Train _Onsets and Frames_"
+    "# Train _Onsets and Frames_\n",
+    "\n",
+    "$OF$ & $OF_{fl}$"
    ]
   },
   {
@@ -75,7 +77,7 @@
     "from transcriber import OnsetsAndFrames\n",
     "model = OnsetsAndFrames().to(device)\n",
     "optimizer = torch.optim.AdamW(model.parameters(), lr=6e-4) # follow the paper\n",
-    "schedular = torch.optim.lr_scheduler.ReduceLROnPlateau(optimizer, mode='min', factor=0.3, patience=2, threshold=1e-3)\n",
+    "schedular = torch.optim.lr_scheduler.ReduceLROnPlateau(optimizer, mode='min', factor=0.35, patience=3, threshold=1e-3)\n",
     "checkpoint_path = \"of.pth\"\n",
     "loss_path = \"of.loss.txt\"\n",
     "min_loss = float('inf')\n",
@@ -104,7 +106,7 @@
    "source": [
     "from model.loss import AMT_loss\n",
     "\n",
-    "epoch_total = 39\n",
+    "epoch_total = 60\n",
     "stage_save_interval = 40    # save checkpoint every $stage_save_interval$ epochs\n",
     "\n",
     "optimizer.zero_grad()\n",
@@ -125,7 +127,7 @@
     "            mixed = input.squeeze(dim=1)\n",
     "            midi_mixed = target.squeeze(dim=1)\n",
     "\n",
-    "        mixed = mixed + torch.randn_like(mixed) * 0.005\n",
+    "        mixed = mixed + torch.randn_like(mixed) * 0.0005 * torch.rand(mixed.shape[0], 1, 1, device=mixed.device)\n",
     "        # midi_mixed: (batch, 7 * 12, 660)\n",
     "\n",
     "        onset, note = model(mixed)\n",
@@ -162,7 +164,7 @@
     "\n",
     "        val_loss /= len(valloader)\n",
     "    \n",
-    "    final_loss = val_loss * 0.85 + train_loss * 0.15\n",
+    "    final_loss = val_loss\n",
     "    schedular.step(final_loss)\n",
     "\n",
     "    # save checkpoint\n",
@@ -320,7 +322,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "timbreamt (3.12.12)",
+   "display_name": "timbreamt",
    "language": "python",
    "name": "python3"
   },
