--- a/onsets_frames/train_of_musicnet.ipynb
+++ b/onsets_frames/train_of_musicnet.ipynb
@@ -4,9 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Train with BasicPitch's Loss\n",
-    "\n",
-    "The first round of basicamt training must be completed."
+    "# OF train with musicnet\n",
+    "$OF_{MN}^{fl}$: onset&frame model with focal loss trained on MusicNet"
    ]
   },
   {
@@ -20,15 +19,12 @@
     "import tqdm\n",
     "\n",
     "import sys\n",
-    "sys.path.append(\"../..\")\n",
-    "sys.path.append(\"../../..\")\n",
+    "sys.path.append(\"..\")\n",
     "from utils.checkpoint import save_ckpt_template as save_ckpt, load_ckpt_template as load_ckpt\n",
-    "from basicpitch.loss import basicpitch_loss\n",
-    "lossfn = basicpitch_loss(weighted=True, positive_weight=0.95)\n",
     "\n",
     "if torch.cuda.is_available():\n",
     "    device = torch.device('cuda')\n",
-    "    torch.backends.cudnn.benchmark = True   # 加速卷积计算\n",
+    "    torch.backends.cudnn.benchmark = True\n",
     "else:\n",
     "    device = torch.device('cpu')\n",
     "\n",
@@ -41,36 +37,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from data.septimbre.data import Instruments\n",
-    "dataset = Instruments(\n",
-    "    folder = '../../../data/septimbre/multi_large_256',\n",
-    "    mix = 1,\n",
+    "from data.musicnet.data import MusicNetData\n",
+    "\n",
+    "def collate_fn(batch):\n",
+    "    inputs, outputs = zip(*batch)\n",
+    "    inputs = torch.stack(inputs)  # [batch, ...]\n",
+    "    return inputs, list(outputs)\n",
+    "\n",
+    "dataset = MusicNetData(\n",
+    "    folder = '../data/musicnet/train',\n",
     "    input = '.wav',\n",
     "    output = '.npy'\n",
     ")\n",
-    "dataloader = torch.utils.data.DataLoader(dataset, batch_size=18, shuffle=True, pin_memory=True, num_workers=4)\n",
     "print(\"训练集大小: \", len(dataset))\n",
     "input, label = dataset[0]\n",
     "print(\"输入大小: \", input.shape)\n",
     "print(\"输出大小: \", label.shape)\n",
+    "# 如果开了benchmark，batchsize最好一样大，且是两个数据集大小的公因数\n",
+    "dataloader = torch.utils.data.DataLoader(\n",
+    "    dataset, batch_size=18, shuffle=True, pin_memory=True, num_workers=4,\n",
+    "    collate_fn=collate_fn\n",
+    ")\n",
     "\n",
-    "val = Instruments(\n",
-    "    folder = '../../../data/septimbre/multi_medium_256',\n",
-    "    mix = 1,\n",
+    "val = MusicNetData(\n",
+    "    folder = '../data/musicnet/test',\n",
     "    input = '.wav',\n",
     "    output = '.npy'\n",
     ")\n",
-    "valloader = torch.utils.data.DataLoader(val, batch_size=18, shuffle=False, pin_memory=True, num_workers=4)\n",
     "print(\"测试集大小: \", len(val))\n",
     "input, label = val[0]\n",
     "print(\"输入大小: \", input.shape)\n",
     "print(\"输出大小: \", label.shape)\n",
+    "valloader = torch.utils.data.DataLoader(\n",
+    "    val, batch_size=18, shuffle=False, pin_memory=True, num_workers=4,\n",
+    "    collate_fn=collate_fn\n",
+    ")\n",
     "\n",
     "# CQT配置\n",
     "from model.config import CONFIG\n",
-    "s_per_frame = CONFIG.s_per_frame\n",
-    "\n",
-    "_model = None"
+    "s_per_frame = CONFIG.s_per_frame"
    ]
   },
   {
@@ -79,34 +84,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 从分体开始\n",
-    "from basicamt import BasicAMT, BasicAMT_all\n",
-    "_model = BasicAMT().to(device)\n",
-    "optimizer = torch.optim.AdamW(_model.parameters(), lr=2e-4)\n",
-    "checkpoint_path = \"basicamt.pth\"\n",
-    "\n",
-    "# 加载最佳模型\n",
-    "states = load_ckpt(_model, optimizer, \"../../\" + \"best_\" + checkpoint_path)\n",
-    "if not states:\n",
-    "    print(\"No best checkpoint loaded.\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from basicamt import BasicAMT, BasicAMT_all\n",
-    "if _model is not None:\n",
-    "    model = BasicAMT_all(CONFIG.CQT, _model.state_dict(), CQTlearnable = False).to(device)\n",
-    "    print(\"model initialized from BasicAMT\")\n",
-    "else:\n",
-    "    model = BasicAMT_all(CONFIG.CQT, CQTlearnable = False).to(device)\n",
-    "optimizer = torch.optim.AdamW(model.parameters(), lr=3e-4)  # follow the origin paper\n",
-    "schedular = torch.optim.lr_scheduler.ReduceLROnPlateau(optimizer, mode='min', factor=0.35, patience=3, threshold=1e-3)\n",
-    "checkpoint_path = \"basicamt_all_BCE.pth\"\n",
-    "loss_path = \"basicamt_all_BCE.loss.txt\"\n",
+    "from transcriber import OnsetsAndFrames\n",
+    "model = OnsetsAndFrames().to(device)\n",
+    "optimizer = torch.optim.AdamW(model.parameters(), lr=6e-4) # follow the paper\n",
+    "schedular = torch.optim.lr_scheduler.ReduceLROnPlateau(optimizer, mode='min', factor=0.3, patience=4, threshold=1e-3)\n",
+    "checkpoint_path = \"of_MN.pth\"\n",
+    "loss_path = \"of_MN.loss.txt\"\n",
     "min_loss = float('inf')\n",
     "epoch_now = 0"
    ]
@@ -131,70 +114,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_train = torch.compile(model.train(), mode=\"max-autotune\")\n",
-    "model_eval = torch.compile(model.eval(), mode=\"max-autotune\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "from model.loss import AMT_loss\n",
+    "\n",
     "epoch_total = 60\n",
     "stage_save_interval = 40    # save checkpoint every $stage_save_interval$ epochs\n",
     "\n",
     "optimizer.zero_grad()\n",
     "for epoch in range(epoch_now+1, epoch_total):\n",
     "    # training\n",
-    "    model_train.train()\n",
+    "    model.train()\n",
     "    train_loss = 0\n",
     "    virtual_batch = 0\n",
     "    for (input, target) in tqdm.tqdm(dataloader):\n",
-    "        input = input.to(device)    # input: (batch, mix, 2, time)\n",
-    "        target = target.to(device)  # target: (batch, mix, 7 * 12, 660)\n",
+    "        target = [x.max(dim=0)[0] for x in target]\n",
+    "        target = torch.stack(target, dim=0).to(device) # target: (batch, 7 * 12, frames)\n",
     "\n",
-    "        # 由于basicamt的目标没有分离音色，因此mix仅仅是数据增强的手段\n",
-    "        if dataset.mix > 1:\n",
-    "            mixed = torch.mean(input, dim=1, keepdim=False)  # 混合后的CQT\n",
-    "            midi_mixed, _ = target.max(dim=-3, keepdim=False)\n",
-    "        else:\n",
-    "            mixed = input.squeeze(dim=1)\n",
-    "            midi_mixed = target.squeeze(dim=1)\n",
+    "        # input = input + torch.randn_like(input) * 0.001\n",
+    "        input = input.to(device)    # input: (batch, channel, time)\n",
     "\n",
-    "        mixed = mixed + torch.randn_like(mixed) * 0.0005 * torch.rand(mixed.shape[0], 1, 1, device=mixed.device)\n",
-    "        # midi_mixed: (batch, 7 * 12, 660)\n",
-    "\n",
-    "        onset, note = model_train(mixed)\n",
+    "        onset, note = model(input)\n",
     "        # onset & note: (batch, 7 * 12, 660)\n",
-    "        # loss = BasicAMT.loss(onset, note, midi_mixed)\n",
-    "        loss = lossfn[\"note\"]((midi_mixed == 1).float(), note) + lossfn[\"onset\"]((midi_mixed > 1.5).float(), onset)\n",
+    "        # loss = OnsetsAndFrames.loss(onset, note, target)\n",
+    "        loss = AMT_loss(onset, note, target, mse=False)\n",
     "        train_loss += loss.item()\n",
     "\n",
     "        loss.backward()\n",
     "        optimizer.step()\n",
     "        optimizer.zero_grad()\n",
-    "        model.clampK()\n",
     "\n",
     "    train_loss /= len(dataloader)\n",
     "\n",
     "    # validation\n",
-    "    model_eval.eval()\n",
+    "    model.eval()\n",
     "    val_loss = 0\n",
     "    with torch.no_grad():\n",
     "        for (input, target) in tqdm.tqdm(valloader):\n",
+    "            target = [x.max(dim=0)[0] for x in target]\n",
+    "            target = torch.stack(target, dim=0).to(device) # target: (batch, mix, 7 * 12, frames)\n",
     "            input = input.to(device)\n",
-    "            target = target.to(device)\n",
-    "\n",
-    "            if val.mix > 1:\n",
-    "                mixed = torch.sum(input, dim=1, keepdim=False)\n",
-    "                midi_mixed, _ = target.max(dim=-3, keepdim=False)\n",
-    "            else:\n",
-    "                mixed = input.squeeze(dim=1)\n",
-    "                midi_mixed = target.squeeze(dim=1)\n",
-    "\n",
-    "            onset, note = model_eval(mixed)\n",
-    "            loss = lossfn[\"note\"]((midi_mixed == 1).float(), note) + lossfn[\"onset\"]((midi_mixed > 1.5).float(), onset)\n",
+    "            onset, note = model(input)\n",
+    "            # loss = OnsetsAndFrames.loss(onset, note, target)\n",
+    "            loss = AMT_loss(onset, note, target, mse=False)\n",
     "            val_loss += loss.item()\n",
     "\n",
     "        val_loss /= len(valloader)\n",
@@ -212,15 +172,6 @@
     "    with open(loss_path, 'a') as f:\n",
     "        f.write(f\"{epoch}:\\ttrain_loss: {train_loss:.4f}\\tval_loss: {val_loss:.4f}\\n\")\n",
     "    epoch_now = epoch"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model.cqt.cqt_kernels.requires_grad"
    ]
   },
   {
@@ -274,6 +225,7 @@
    "source": [
     "# 加载最佳模型\n",
     "states = load_ckpt(model, optimizer, \"best_\" + checkpoint_path)\n",
+    "# states = load_ckpt(model, optimizer, checkpoint_path)\n",
     "if states:\n",
     "    min_loss, avg_loss, epoch_now = states\n",
     "else:\n",
@@ -305,13 +257,13 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "\n",
-    "test_wave_path = \"../../../data/inferMusic/piano_short.wav\"\n",
-    "# test_wave_path = \"../../../data/inferMusic/孤独な巡礼simple.wav\"\n",
+    "# test_wave_path = \"../data/inferMusic/piano_short.wav\"\n",
+    "test_wave_path = \"../data/inferMusic/孤独な巡礼simple.wav\"\n",
     "waveInfo(test_wave_path)\n",
     "\n",
     "waveform, sample_rate = torchaudio.load(test_wave_path, normalize=True)\n",
     "waveform = waveform.unsqueeze(0)\n",
-    "waveform = model.cqt.down2sample(waveform)\n",
+    "#waveform = model.cqt.down2sample(waveform)\n",
     "print(waveform.shape)\n",
     "\n",
     "test_midi_path = test_wave_path.replace('.wav', '.mid')\n",
@@ -360,24 +312,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "torch.save(model, \"basicamt_model_BCE.pth\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# plt.imsave(\"basicamt_BCE_infer_note.png\", note, cmap='gray', origin='lower')\n",
-    "# plt.imsave(\"basicamt_BCE_infer_onset.png\", onset, cmap='gray', origin='lower')\n",
-    "# np.savez(\"basicamt_BCE_infer_output.npz\", note=note, onset=onset)"
+    "# final model to be used by others\n",
+    "torch.save(model, \"of_model_MN.pth\")"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "timbreamt",
+   "display_name": "timbreamt (3.12.12)",
    "language": "python",
    "name": "python3"
   },
