--- a/septimbre/ablation/DicephNet/train_musicnet.ipynb
+++ b/septimbre/ablation/DicephNet/train_musicnet.ipynb
@@ -15,7 +15,7 @@
     "from utils.checkpoint import save_ckpt_template as save_ckpt, load_ckpt_template as load_ckpt\n",
     "\n",
     "if torch.cuda.is_available():\n",
-    "    device = torch.device('cuda:1')\n",
+    "    device = torch.device('cuda')\n",
     "    torch.backends.cudnn.benchmark = True   # 加速卷积计算\n",
     "else:\n",
     "    device = torch.device('cpu')\n",
@@ -79,7 +79,7 @@
     "from DicephNet import DicephNet\n",
     "model = DicephNet().to(device)\n",
     "optimizer = torch.optim.AdamW(model.parameters(), lr=5e-4)\n",
-    "schedular = torch.optim.lr_scheduler.ReduceLROnPlateau(optimizer, mode='min', factor=0.3, patience=3, threshold=1e-3)\n",
+    "schedular = torch.optim.lr_scheduler.ReduceLROnPlateau(optimizer, mode='min', factor=0.35, patience=3, threshold=1e-3)\n",
     "checkpoint_path = \"dicephnet.pth\"\n",
     "loss_path = \"dicephnet.loss.txt\"\n",
     "min_loss = float('inf')\n",
@@ -144,22 +144,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "epoch_total = 63\n",
-    "stage_save_interval = 50    # save checkpoint every $stage_save_interval$ epochs\n",
+    "model_train = torch.compile(model.train(), mode='max-autotune')\n",
+    "model_eval = torch.compile(model.eval(), mode='max-autotune')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "epoch_total = 62\n",
+    "stage_save_interval = 40    # save checkpoint every $stage_save_interval$ epochs\n",
     "\n",
     "optimizer.zero_grad()\n",
     "for epoch in range(epoch_now+1, epoch_total):\n",
     "    # training\n",
-    "    model.train()\n",
+    "    model_train.train()\n",
     "    train_loss = [0., 0.]\n",
     "    virtual_batch = 0\n",
     "    for (input, target) in tqdm.tqdm(dataloader):\n",
     "        input = input.to(device)    # input: (batch, channel, time)\n",
+    "        input = input + torch.randn_like(input) * 0.0005 * torch.rand(input.shape[0], 1, 1, device=input.device)\n",
     "        for i in range(len(target)):\n",
     "            target[i] = target[i].to(device)\n",
     "        # target: list of (mix, notes, time) tensor\n",
     "\n",
-    "        onset, frame, emb = model(input)\n",
+    "        onset, frame, emb = model_train(input)\n",
     "        emb = torch.nn.functional.normalize(emb, p=2, dim=1)\n",
     "        clloss, amtloss = DicephNet.loss(emb, frame, onset, target)\n",
     "        train_loss[0] += clloss.item()\n",
@@ -171,14 +182,14 @@
     "    train_loss[1] /= len(dataset)\n",
     "\n",
     "    # validation\n",
-    "    model.eval()\n",
+    "    model_eval.eval()\n",
     "    val_loss = [0., 0.]\n",
     "    with torch.no_grad():\n",
     "        for (input, target) in tqdm.tqdm(valloader):\n",
     "            input = input.to(device)\n",
     "            for i in range(len(target)):\n",
     "                target[i] = target[i].to(device)\n",
-    "            onset, frame, emb = model(input)\n",
+    "            onset, frame, emb = model_eval(input)\n",
     "            emb = torch.nn.functional.normalize(emb, p=2, dim=1)\n",
     "            clloss, amtloss = DicephNet.loss(emb, frame, onset, target)\n",
     "            val_loss[0] += clloss.item()\n",
@@ -190,9 +201,8 @@
     "    train_loss_sum = LossNorm.norm_sum(torch.tensor([train_loss[0], train_loss[1]])).item()\n",
     "    val_loss_sum = LossNorm.norm_sum(torch.tensor([val_loss[0], val_loss[1]])).item()\n",
     "\n",
-    "    final_loss = val_loss_sum * 0.85 + train_loss_sum * 0.15\n",
+    "    final_loss = val_loss_sum\n",
     "    schedular.step(final_loss)\n",
-    "\n",
     "\n",
     "    # save checkpoint\n",
     "    checkpoint_filename = f\"epoch{epoch}.pth\" if epoch % stage_save_interval == 0 else checkpoint_path\n",
